welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:2: error: value && is not a member of Unit
  if ((estDans(a,30,40))&&(estDans(b,30,40))){
                        ^in3050:4: error: value && is not a member of Unit
  if ((estDans(a,40,50))&&(estDans(b,40,50))){
                        ^in3050:9: warning: enclosing method estDans has result type Unit: return value discarded
  return (a>=b)&&(a<=c)
  ^